# python-mediamtx-rmmtxauthz

./: .bumpversion.cfg  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile_alpine  Dockerfile_debian  Dockerfile_pycharm  README.rst  pyproject.toml  tox.ini
.github/workflows/: build.yml
docker/: container-init.sh  entrypoint-dev.sh  entrypoint.sh  pre_commit_init.sh
src/rmmtxauthz/: __init__.py  config.py  console.py  mediamtx.py
src/rmmtxauthz/db/: __init__.py  base.py  dbinit.py  engine.py  errors.py  product.py  user.py
src/rmmtxauthz/schema/: __init__.py  interop.py  mediamtx.py  userdirect.py
src/rmmtxauthz/web/: application.py  description.py  health.py  instructions.py  interop.py  mediamtx.py  usercrud.py  userdirect.py  userinfo.py  userproxy.py
tests/: conftest.py  docker-compose.yml  test_console.py  test_interop.py  test_mediamtx.py  test_orm.py  test_rmmtxauthz.py  test_usercrud.py
tests/pg_init/: 01-rmmtxauthz.sh
ui/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/components/: PageRenderer.tsx  TabProvider.tsx  data-table.tsx  number-input.tsx  stream-list.tsx  translated-text.tsx
ui/src/lib/: clipboard.ts  useUrlTab.ts
ui/src/locales/: en.json  fi.json  sv.json
ui/src/model/: stream-config.ts
ui/src/pages/: HomePage.tsx  LivePage.tsx  StreamPage.tsx  WatchPage.tsx
ui/src/pages/watch/: Columns.tsx  WatchPage.tsx
