[project]
name = "rmmtxauthz"
version = "1.2.0"
description = "Do HTTP based authz for MediaMTX"
authors = [{name="Eero af Heurlin", email="eero.afheurlin@iki.fi" }]
homepage = "https://github.com/pvarki/python-mediamtx-rmmtxauthz"
repository = "https://github.com/pvarki/python-mediamtx-rmmtxauthz"
license = "MIT"
readme = "README.rst"
dynamic = ["dependencies", "requires-python"]

[project.scripts]
rmmtxauthz = "rmmtxauthz.console:rmmtxauthz_cli"


[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  |  __pycache__
)
'''

[tool.mypy]
strict=true

[tool.pytest.ini_options]
junit_family="xunit2"
addopts="--cov=rmmtxauthz --cov-fail-under=65 --cov-branch"
asyncio_mode="strict"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-parents = 10

[tool.pylint.messages_control]
disable=["fixme", "W1202", "C0209"]

[tool.pylint.similarities]
min-similarity-lines = 8
ignore-imports = true

[tool.coverage.run]
omit = ["tests/*"]
branch = true

[tool.poetry.dependencies]
python = "^3.11"
libadvian = "^1.4"
click = "^8.1"
pydantic = "^2.10"
sqlmodel = ">=0.0.24,<1.0"
gunicorn = "^23.0"
uvicorn = { version = ">=0.34,<1.0", extras = ["standard"] }
fastapi = ">=0.115,<1.0"
pydantic-settings = "^2.8"
pydantic-collections = ">=0.6.0,<1.0"
filelock = "^3.17"
psycopg2-binary = "^2.9"
libpvarki = { git="https://github.com/pvarki/python-libpvarki.git", tag="2.0.1"}
aiohttp = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
coverage = "^7.4"
pytest-cov = "^4.1"
pylint = "^3.3"
black = "^25.1"
bandit = "^1.8"
mypy = "^1.15"
pre-commit = "^3.6"
pytest-asyncio = ">=0.21,<1.0" # caret behaviour on 0.x is to lock to 0.x.*
bump2version = "^1.0"
detect-secrets = "^1.5"
pytest-docker = "^3.2"
httpx = ">=0.28.1,<1.0"
hyperify-rune = ">=0.1.6,<1.0"

[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"
